--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "vant": "2.12.15",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
