--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.0",
     "core-js": "^3.6.5",
+    "cropperjs": "^1.6.1",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "vant": "2.12.15",
